# server/openApi.json
@@ -325,7 +325,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -335,7 +335,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -758,7 +758,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -768,7 +768,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -921,7 +921,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -931,7 +931,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -1278,7 +1278,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -1288,7 +1288,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -1436,7 +1436,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -1446,7 +1446,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -1621,7 +1621,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -1631,7 +1631,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -1804,7 +1804,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -1814,7 +1814,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -1892,7 +1892,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -1902,7 +1902,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -2080,7 +2080,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -2090,7 +2090,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -2134,7 +2134,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -2144,7 +2144,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -2530,7 +2530,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -2540,7 +2540,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -3059,7 +3059,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -3069,7 +3069,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -3327,7 +3327,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -3337,7 +3337,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -3709,7 +3709,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -3719,7 +3719,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -3844,7 +3844,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -3854,7 +3854,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -4122,7 +4122,7 @@
         "parameters": [
           {
             "name": "pageNum",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "当前分页",
             "schema": {
@@ -4132,7 +4132,7 @@
           },
           {
             "name": "pageSize",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "每页数量",
             "schema": {
@@ -4331,10 +4331,15 @@
           "file": {
             "type": "string",
             "format": "binary"
+          },
+          "path": {
+            "type": "string",
+            "description": "文件存储路径（如：avatar、article、document），不能为空"
           }
         },
         "required": [
-          "file"
+          "file",
+          "path"
         ]
       },
       "ChunkMergeFileDto": {
@@ -4345,11 +4350,16 @@
           },
           "fileName": {
             "type": "string"
+          },
+          "path": {
+            "type": "string",
+            "description": "文件存储路径（如：avatar、article、document），不能为空"
           }
         },
         "required": [
           "uploadId",
-          "fileName"
+          "fileName",
+          "path"
         ]
       },
       "CreateConfigDto": {
@@ -4399,11 +4409,7 @@
             "type": "string",
             "description": "排序规则"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "UpdateConfigDto": {
         "type": "object",
@@ -4565,11 +4571,7 @@
             "type": "string",
             "description": "排序规则"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "CreateMenuDto": {
         "type": "object",
@@ -4716,11 +4718,7 @@
             "type": "string",
             "description": "排序规则"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "UpdateNoticeDto": {
         "type": "object",
@@ -4779,11 +4777,7 @@
             "type": "string",
             "description": "排序规则"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "UpdatePostDto": {
         "type": "object",
@@ -4860,11 +4854,7 @@
             "type": "string",
             "description": "排序规则"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "UpdateRoleDto": {
         "type": "object",
@@ -4951,11 +4941,7 @@
           "roleId": {
             "type": "string"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "AuthUserCancelDto": {
         "type": "object",
@@ -5233,11 +5219,7 @@
           "status": {
             "type": "string"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "CreateJobDto": {
         "type": "object",
@@ -5350,8 +5332,6 @@
           }
         },
         "required": [
-          "pageNum",
-          "pageSize",
           "jobName",
           "jobGroup",
           "status"
@@ -5395,11 +5375,7 @@
           "status": {
             "type": "string"
           }
-        },
-        "required": [
-          "pageNum",
-          "pageSize"
-        ]
+        }
       },
       "OnlineListDto": {
         "type": "object",
